--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="img/imagen.jpg" alt=" Administrador de Empresas y Desarrollador de Software" class="profile-pic">
                 <h1>Hola, soy Andrés Darío Zuluaga Jiménez</h1>
                 <h2>Administrador de Empresas y Tecnólogo en Análisis y Desarrollo de Software</h2>
-                <p>Fusionando la visión estratégica del negocio con la innovación tecnológica para crear soluciones impactantes y eficientes.</p>
+                <p>Soy un profesional con una visión única, fusionando la administración de empresas con la tecnología de análisis y desarrollo de software. Mi objetivo es crear soluciones innovadoras que no solo resuelvan problemas técnicos, sino que también impulsen el crecimiento y la eficiencia empresarial.</p>
                 <a href="#proyectos" class="btn">Ver Proyectos</a>
             </div>
         </section>
