--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Andrés Darío Zuluaga Jiménez</div>
+            <div class="logo">Currículum vitae</div>
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
