--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </form>
             <div class="social-links hidden-fade">
                 <a href="https://linkedin.com/in/tu-perfil-linkedin" target="_blank">LinkedIn</a>
-                <a href="https://github.com/tu-usuario-github" target="_blank">GitHub</a>
+                <a href="https://github.com/Exporti03" target="_blank">GitHub</a>
                 </div>
         </section>
     </main>
