--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
         <section id="habilidades" class="habilidades-section">
             <h2>Mis Habilidades</h2>
             <div class="habilidades-grid">
-                <div class="habilidad-item hidden-fade">HTML5</div>
-                <div class="habilidad-item hidden-fade">CSS3</div>
-                <div class="habilidad-item hidden-fade">JavaScript (ES6+)</div>
-                <div class="habilidad-item hidden-fade">Responsive Design</div>
+                <div class="habilidad-item hidden-fade">HTML</div>
+                <div class="habilidad-item hidden-fade">CSS</div>
+                <div class="habilidad-item hidden-fade">JavaScript</div>
+                <div class="habilidad-item hidden-fade">Docker</div>
                 <div class="habilidad-item hidden-fade">Git & GitHub</div>
                 <div class="habilidad-item hidden-fade">Bases de Datos (SQL, NoSQL)</div>
                 <div class="habilidad-item hidden-fade">Análisis de Requisitos</div>
                 <div class="habilidad-item hidden-fade">Metodologías Ágiles (Scrum)</div>
+                <div class="habilidad-item hidden-fade">C++</div>
                 </div>
         </section>
 
