--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <button type="submit" class="btn">Enviar Mensaje</button>
             </form>
             <div class="social-links hidden-fade">
-                <a href="https://linkedin.com/in/tu-perfil-linkedin" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/andres-dario-zuluaga-7b92511bb/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/Exporti03" target="_blank">GitHub</a>
                 </div>
         </section>
