--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <div class="habilidad-item hidden-fade">Análisis de Requisitos</div>
                 <div class="habilidad-item hidden-fade">Metodologías Ágiles (Scrum)</div>
                 <div class="habilidad-item hidden-fade">C++</div>
+                <div class="habilidad-item hidden-fade">Python</div>
                 </div>
         </section>
 
